--- a/Projects/Fragments/learning-fragments/src/App.css
+++ b/Projects/Fragments/learning-fragments/src/App.css
@@ -1,4 +1,4 @@
-.food-heading{
-    background-color: silver;
-    color: black;
-}
+.food-heading {
+    color: brown;
+    text-align: center;
+  }
